--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,8 @@ requires-python = ">=3.14"
 dependencies = [
     "pyside6>=6.10.1",
 ]
+
+[tool.uv.workspace]
+members = [
+    "wk11/pygameapp",
+]
